# modern-di-grpc

./: Justfile  README.md  pyproject.toml
.github/workflows/: release.yml
architecture/: README.md  dependency-injection.md
modern_di_grpc/: __init__.py  main.py
planning/: README.md
planning/changes/: 2026-07-11.01-grpc-di-integration.md  2026-07-13.01-aio-coverage-flake.md  2026-07-13.02-adopt-integration-kit.md  2026-07-20.01-open-per-request-child.md
planning/decisions/: 2026-07-13-coveragepy-2124-flake.md
planning/releases/: 2.0.0.md  2.1.0.md  3.0.0.md
tests/: conftest.py  dependencies.py  test_aio.py  test_inject.py  test_smoke.py  test_sync.py
tests/protos/: greeter.proto  greeter_pb2.py  greeter_pb2_grpc.py
